[package]
name = "trolly"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
ctrlc = "3.2.3"
futures-util = "0.3.21"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
tokio = { version = "1.20.1", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls-vendored"] }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.2.2"
lob = { git = "https://github.com/CAGS295/lob.git", features = [
    "serde",
    "event-time",
] }
serde_json = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
