[package]
name = "trolly"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.7", features = ["macros"] }
color-eyre = { version = "0.6.2", default-features = false }
clap = { version = "4.2.1", features = ["derive"] }
ctrlc = "3.2.3"
futures-util = "0.3.21"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "^0", features = ["native-tls-vendored"] }
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.2.2"
lob = { git = "https://github.com/CAGS295/lob.git", default-features = false, features = [
    "serde",
    "event-time",
    "event-symbol",
] }
serde_json = "*"
serde = "*"
left-right = "0.11.5"
tonic = { version = "*", optional = true }
prost = { version = "*", optional = true }
hyper = { version = "^1" }
http = "^1"
tower-http = { version = "^0", default-features = false, features = [
    "compression-gzip",
] }
flate2 = "^1.0"
opentelemetry = "0.19.0"
tracing-opentelemetry = "0.19.0"
opentelemetry-jaeger = "0.18.0"
hyper-util = { version = "0.1.6", features = ["server", "http2", "tokio"] }
tower = "0.4.13"

[dev-dependencies]
rand = { version = "*" }
criterion = "*"
http-body-util = "0.1.2"

[features]
default = ["grpc", "codec"]
grpc = ["tonic", "prost", "lob/grpc"]
codec = ["lob/codec"]

[[bench]]
name = "depth_monitor"
harness = false

[[bench]]
name = "depth_monitor_scale"
harness = false

#[patch."https://github.com/CAGS295/lob.git"]
#lob = { path = "../lob" }
