[package]
name = "binance-usdm-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
trolly-stream = { path = "../trolly-stream" }
trolly-strategy = { path = "../trolly-strategy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.20.1", features = ["sync"] }
tracing = "0.1.36"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "blocking",
    "native-tls-vendored",
] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
