[package]
name = "binance-usdm-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
trolly-stream = { path = "../trolly-stream" }
trolly-strategy = { path = "../trolly-strategy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.2.2"
native-tls = "0.2"
thiserror = "1"
tokio = { version = "1.20.1", features = ["sync"] }
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt"] }
