[package]
name = "trolly-gym"
version = "0.1.0"
edition = "2021"

[dependencies]
trolly-strategy = { path = "../trolly-strategy" }
trolly-stream = { path = "../trolly-stream" }
tch = { version = "0.16", optional = true }

[features]
default = []
torch = ["dep:tch"]

[dev-dependencies]
trolly-strategy = { path = "../trolly-strategy" }
tempfile = "3"
