[package]
name = "trolly-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.21"
http = "1"
tokio = { version = "1.20.1", features = ["net", "rt", "macros"] }
tokio-tungstenite = { version = "^0", features = ["native-tls-vendored"] }
tracing = "0.1.36"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1.20.1", features = ["macros", "rt"] }
